<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/map"
    tools:context="ch.heia.mobiledev.treasurehunt.MenuScreenActivity"
    tools:ignore="Overdraw">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textSize="@dimen/message_text_size"
        android:id="@+id/welcome"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="@dimen/length_size"
        android:layout_height="wrap_content"
        android:text="@string/cont_button"
        android:id="@+id/buttonCont"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/button_text_size"
        android:background="@color/white"
        android:onClick="onContinueClicked"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="@dimen/length_size"
        android:layout_height="wrap_content"
        android:text="@string/new_button"
        android:id="@+id/buttonNew"
        android:layout_below="@+id/buttonCont"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/button_text_size"
        android:background="@color/white"
        android:onClick="onNewClicked"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="@dimen/length_size"
        android:layout_height="wrap_content"
        android:text="@string/help_button"
        android:id="@+id/buttonHelp"
        android:layout_below="@+id/buttonNew"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/button_text_size"
        android:background="@color/white"
        android:onClick="onHelpClicked"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>