<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/map">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clue_1"
                android:layout_width="@dimen/circle_btn_size_land"
                android:layout_height="@dimen/circle_btn_size_land"
                android:background="@drawable/btn_main_screen"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/overview_clue_fragment_margin"
                android:layout_weight="0.5"
                android:text="@string/overview_clue_frag_1_text"/>
            <Button
                android:id="@+id/clue_2"
                android:layout_width="@dimen/circle_btn_size_land"
                android:layout_height="@dimen/circle_btn_size_land"
                android:background="@drawable/btn_main_screen"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/overview_clue_fragment_margin"
                android:layout_weight="0.5"
                android:text="@string/overview_clue_frag_2_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clue_3"
                android:layout_width="@dimen/circle_btn_size_land"
                android:layout_height="@dimen/circle_btn_size_land"
                android:background="@drawable/btn_main_screen"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/overview_clue_fragment_margin"
                android:layout_weight="0.5"
                android:text="@string/overview_clue_frag_3_text"/>
            <Button
                android:id="@+id/clue_4"
                android:layout_width="@dimen/circle_btn_size_land"
                android:layout_height="@dimen/circle_btn_size_land"
                android:background="@drawable/btn_main_screen"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/overview_clue_fragment_margin"
                android:layout_weight="0.5"
                android:text="@string/overview_clue_frag_4_text"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>